package net.bakaar.sandbox.person.domain.vo;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class SearchPartnerQuery {
    private String name;
    private String socialSocialNumber;
}
